--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -30,10 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.13.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  fluttertoast: ^8.2.12
+  logger: ^1.0.0
+  encrypt: ^5.0.3
+  sqflite: ^2.4.2
+  xml: ^6.5.0
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
