--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   xml: ^6.5.0
   path: ^1.9.1
   yaml: ^3.1.3
+  http3: ^0.0.0
+  quic: ^0.1.0-dev.0
 
 dev_dependencies:
   flutter_test:
