--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   yaml: ^3.1.3
   http3: ^0.0.0
   quic: ^0.1.0-dev.0
+  graphql_flutter: ^5.1.0
+  retry: ^3.0.0
+  logging: ^1.0.0
 
 dev_dependencies:
   flutter_test:
