--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   graphql_flutter: ^5.1.0
   retry: ^3.0.0
   logging: ^1.0.0
+  device_info_plus: ^11.3.1
+  shared_preferences: ^2.5.2
+  geolocator: ^12.0.0
+  flutter_local_notifications: ^18.0.1
+  connectivity_plus: ^2.0.2
+  timezone: ^0.7.0
 
 dev_dependencies:
   flutter_test:
