--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -51,18 +51,14 @@ dependencies:
   geolocator: ^12.0.0
   flutter_local_notifications: ^18.0.1
   connectivity_plus: ^2.0.2
-  timezone: ^0.7.0
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  mockito: ^5.0.17
+  build_runner: ^2.1.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
