--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -64,6 +64,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+  graphql: any
 flutter:
 
   # The following line ensures that the Material Icons font is
